--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -28,9 +28,6 @@ jobs:
         Python38_x64:
           python.version: '3.8'
           python.architecture: 'x64'
-        PyPy3:
-          python.version: 'pypy3'
-          python.architecture: 'x86'
 
     steps:
       - task: UsePythonVersion@0
@@ -45,6 +42,8 @@ jobs:
         displayName: 'Install requirements'
       - script: python -m pip install --force-reinstall -r requirements-tests.txt
         displayName: 'Install tests requirements'
+      - script: python -m pip install .
+        displayName: 'Install'
       - script: pytest
         displayName: 'Run tests'
       - script: python -m doctest README.md
@@ -54,6 +53,24 @@ jobs:
         displayName: 'Upload coverage'
         env:
           CODECOV_TOKEN: $(CODECOV_TOKEN)
+      - script: python -m pip install --upgrade cibuildwheel
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Install build requirements'
+      - bash:
+          CIBW_BEFORE_BUILD='python -m pip install -r requirements.txt'
+          CIBW_BUILD=$(python -c 'import sys; print("cp" + "".join(map(str, sys.version_info[:2])) + "-*")')
+          cibuildwheel --output-dir dist
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Build wheels'
+      - script: python -m pip install --upgrade twine
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Install deployment requirements'
+      - script: twine upload --skip-existing dist/*
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Deploy wheels'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: $(TWINE_PASSWORD)
 
   - job: 'MacOS'
     pool:
@@ -68,8 +85,6 @@ jobs:
           python.version: '3.7'
         Python38:
           python.version: '3.8'
-        PyPy3:
-          python.version: 'pypy3'
 
     steps:
       - task: UsePythonVersion@0
@@ -79,16 +94,47 @@ jobs:
         displayName: 'Install packaging tools'
       - script: python -m pip install --upgrade codecov
         displayName: 'Install codecov'
+      - script: python -m pip install --upgrade gcovr
+        displayName: 'Install gcovr'
       - script: python -m pip install --force-reinstall -r requirements.txt
         displayName: 'Install requirements'
       - script: python -m pip install --force-reinstall -r requirements-tests.txt
         displayName: 'Install tests requirements'
+      - script: python -m pip install -e .
+        displayName: 'Install in editable mode'
+        env:
+          CPPFLAGS: --coverage
       - script: pytest
         displayName: 'Run tests'
       - script: python -m doctest README.md
         displayName: 'Run doctests'
+      - script: gcovr --filter src/ --xml -o coverage_cpp.xml
+        displayName: 'Collect C++ coverage'
       - script: python -m codecov -f coverage.xml -X gcov
         condition: succeeded()
         displayName: 'Upload coverage'
         env:
           CODECOV_TOKEN: $(CODECOV_TOKEN)
+      - script: python -m codecov -f coverage_cpp.xml -X gcov
+        condition: succeeded()
+        displayName: 'Upload C++ coverage'
+        env:
+          CODECOV_TOKEN: $(CODECOV_TOKEN)
+      - script: python -m pip install --upgrade cibuildwheel
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Install build requirements'
+      - bash:
+          CIBW_BEFORE_BUILD='python -m pip install -r requirements.txt'
+          CIBW_BUILD=$(python -c 'import sys; print("cp" + "".join(map(str, sys.version_info[:2])) + "-*")')
+          cibuildwheel --output-dir dist
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Build wheels'
+      - script: python -m pip install --upgrade twine
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Install deployment requirements'
+      - script: twine upload --skip-existing dist/*
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        displayName: 'Deploy wheels'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: $(TWINE_PASSWORD)
