Complete local testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3'
 
 services:
-  seidel-pypy:
+  seidel:
     build:
       context: .
       args:
-        - PYTHON_IMAGE=${PYPY_IMAGE_NAME}
-        - PYTHON_IMAGE_VERSION=${PYPY_IMAGE_VERSION}
-    image: lycantropos/seidel-pypy:0.0.0
+        - IMAGE_NAME=${IMAGE_NAME}
+        - IMAGE_VERSION=${IMAGE_VERSION}
+    image: lycantropos/seidel:0.0.0
     volumes:
       - ./seidel/:/opt/seidel/seidel/
+      - ./src/:/opt/seidel/src/
       - ./tests/:/opt/seidel/tests/
       - ./README.md:/opt/seidel/README.md
       - ./requirements.txt:/opt/seidel/requirements.txt
