--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-CPYTHON_IMAGE_NAME=python
-CPYTHON_IMAGE_VERSION=3.5
-PYPY_IMAGE_NAME=pypy
-PYPY_IMAGE_VERSION=3-6
+IMAGE_NAME=python
+IMAGE_VERSION=3.5
