Complete 'bumpversion' configurations

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,9 +12,7 @@ values =
     alpha
     beta
 
-[bumpversion:file:docker-compose.cpython.yml]
-
-[bumpversion:file:docker-compose.pypy.yml]
+[bumpversion:file:docker-compose.yml]
 
 [bumpversion:file:seidel/__init__.py]
 
